Implemented basic movement. Basic steps and presses work, multiple buttons at once do not yet. Turning should also be perfect now.

--- a/data/maps/map001.mkd
+++ b/data/maps/map001.mkd
@@ -1,1 +1,3 @@
-"¤xœ}=Â0E;HÕª êd)þŒ7eÐAÄ­[‰44úš‡þ}S*‚rÞpß™î”çÖ<ŒœSŒ76ÞÔ`¹¢HùJ³L†`Àè;ônôÃ[ã®½×N®)ÂH¿L¦>dØ¿ÓˆdjªÆn3JÀ¶‚±¡uË%žA§˜b§›œ½á\çál±;œM£Û0d(-¾/×”:1yE­
+"§xœ};Â@„SHÑ¨ jeâ¯Øê
+-DÒÙ]!'9ry¹Eÿ¾"ø(d¶˜ùØb&Ž}×bJ!
+\Y;]Å‚éJÅ"î£kÑÙ÷±ÂM9§¬XR€ÿš!ù!©ŒðVŠíË­±úà{|}É±ºM(›ÚøÖ1xxx9†ZUgì4g*sðg.›ÝI×ªñCú"¢¹U9Ñáœ'ÔF£'©EÉ
