Added a few maps, player movement now works based on global coordinates rather than relative map coordinates, added SplitSprite, the base of the message window.

--- a/data/maps/map001.mkd
+++ b/data/maps/map001.mkd
@@ -1,8 +1,2 @@
-"‘xœí•ËoÓ@ÆS„ì<š€Tª
-	PÕGjõ¸•ÀZ¡–BS(X¶öÄ)öšÝMÓ(@y¿åýï²Þ	¥åP8p¬×ú~¶ç›ÙõXZÏ›+w"€\ù5Ö’ÐQ—º	s¢F%ò¶ÒŸf-´ã;²§ÚZr­ÚýSlº\)žûæà@£(‹›ª2v­a•1Áæc//dbôXK)PQÆÓT„u¶†ƒ0ƒÞ=s‡ {BÂ¦H…îq‚+
-y9(	qŒR›
-­ò¼3³æ‘	Kž„³[xj¦™š›¼Ê\´‰ 1j0èb§Â è
-+CLr.c¿n^¡×å›U³ü“Pc_ÕÍ
-èªÆÜbFÛ(¡ÜÎ)aÀ»y[˜nÉžž˜iB$Â
-s†:Gš¬–‹¼Ñëí€˜¯ìmÅ$Æ`žæ¦û¦s¾ËÆqËhQ¿°Át–3Mw¾„Î|íwæ1“‰ÎPY“?ÎjXÅ
-–ÑEk*¾Y5õ7æÚ¯`^ ‹£O5Á~Œ	ÁwÂ7ÂWÂÂgÂ'ÂÁó¼3‘p«w­z)øðžðŽð–ð†ðšðj·Ú-[á¦Õuªö’‚/Ï	ÏO	O	v«]³®Z]¡jÛ|Hx@¸O¶¥›£IYûuÓ_7¸aõºÕ5«£°0À2«©UÏ»bË{m^L1Y.Ùàâ>KÛÆîX½=ò]°Žóû|;cAÕ?‡ã)³—¸Á¤Õƒ=§­ÖpîõµZ:ÀíÚ˜óWß¿–L•†Õ±þ‘Àhƒ¬±3¨“!1›è	Lt„ýâO¸à0'ë‹Ö4¤bÕlÀòÌ§ßƒ_fœ/Ùm¸ÎDùèOÅF©
+"‰xœ•Ž±
+Â0E3H¬Q³¸‹øoÊ ƒH'»eŠôÑ\h“BvðçþÜåp‡s¯zIüb·#í‹páâ,)_† Î|!ñ¥„Ùhãþ‹‚ÂÚ}õÿä[28€c5ˆÒc©ewÕ¤Ó’»OùaÏ7žBª4z¸†ìZ¢Ë½ÝSnV„¾/*
