--- a/data/maps/connections.mkd
+++ b/data/maps/connections.mkd
@@ -1,14 +1,16 @@
---- !ruby/object:MKD::MapConnections
-maps:
-- ? - 0
-    - 0
-  : 1
-  ? - 5
-    - 0
-  : 2
-  ? - 0
-    - 5
-  : 3
-  ? - 5
-    - 5
-  : 4
+---
+:type: :map_connections
+:data: !ruby/object:MKD::MapConnections
+  maps:
+  - ? - 0
+      - 0
+    : 1
+    ? - 5
+      - 0
+    : 2
+    ? - 0
+      - 5
+    : 3
+    ? - 5
+      - 5
+    : 4
