Implemented Options Menu & Refactored Windows and Windowskins
Removed Object#inspect(n) in favor of the default #inspect method.

--- a/data/maps/map001.mkd
+++ b/data/maps/map001.mkd
@@ -48,9 +48,7 @@
         commands:
         - - 0
           - :message
-          - :text: |-
-              Hello {PLAYER}! It's been a while since I last saw you.
-              How's everything going?
+          - :text: Okay, you like your profile the way it is.
         conditions: []
         graphic:
           :type: :file
