--- a/data/tilesets.mkd
+++ b/data/tilesets.mkd
@@ -1,1622 +1,2 @@
----
-:type: :tilesets
-:data:
-- 
-- !ruby/object:MKD::Tileset
-  id: 1
-  name: Common
-  graphic_name: common
-  priorities:
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 1
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 1
-  - 1
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 1
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 1
-  - 1
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  passabilities:
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 15
-  - 15
-  - 0
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 0
-  - 15
-  - 15
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 0
-  - 0
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 0
-  - 0
-  - 15
-  - 0
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 4
-  - 2
-  - 8
-  - 8
-  - 8
-  - 15
-  - 15
-  - 15
-  - 4
-  - 2
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 15
-  - 4
-  - 2
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 15
-  - 5
-  - 7
-  - 3
-  - 15
-  - 15
-  - 5
-  - 7
-  - 3
-  - 13
-  - 15
-  - 11
-  - 15
-  - 15
-  - 13
-  - 15
-  - 11
-  - 12
-  - 14
-  - 10
-  - 15
-  - 15
-  - 12
-  - 14
-  - 10
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 11
-  - 13
-  - 15
-  - 15
-  - 15
-  - 15
-  - 11
-  - 13
-  - 11
-  - 13
-  - 15
-  - 15
-  - 15
-  - 15
-  - 11
-  - 13
-  - 11
-  - 13
-  - 15
-  - 15
-  - 15
-  - 15
-  - 11
-  - 13
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  tags: []
-- !ruby/object:MKD::Tileset
-  id: 2
-  name: Paths
-  graphic_name: paths
-  priorities: []
-  passabilities:
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  tags: []
-- !ruby/object:MKD::Tileset
-  id: 3
-  name: Trees
-  graphic_name: trees
-  priorities:
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 1
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 1
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 1
-  - 
-  - 1
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 1
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 1
-  - 
-  - 1
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 1
-  - 1
-  - 1
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  passabilities:
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 15
-  - 0
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 15
-  - 0
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  tags: []
-- !ruby/object:MKD::Tileset
-  id: 4
-  name: Water
-  graphic_name: water
-  priorities:
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 1
-  - 1
-  - 1
-  - 1
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 1
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  passabilities:
-  - 5
-  - 3
-  - 5
-  - 3
-  - 5
-  - 3
-  - 5
-  - 3
-  - 12
-  - 10
-  - 12
-  - 10
-  - 12
-  - 10
-  - 12
-  - 10
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  tags: []
-- !ruby/object:MKD::Tileset
-  id: 5
-  name: Mountains
-  graphic_name: mountains
-  priorities:
-  - 
-  - 1
-  - 1
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 2
-  - 2
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 2
-  - 2
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 1
-  - 1
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  passabilities:
-  - 15
-  - 15
-  - 15
-  - 8
-  - 8
-  - 8
-  - 4
-  - 2
-  - 15
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 4
-  - 2
-  - 0
-  - 0
-  - 0
-  - 15
-  - 0
-  - 0
-  - 4
-  - 2
-  - 15
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 15
-  - 0
-  - 0
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 0
-  - 0
-  - 15
-  - 0
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 0
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  tags: []
-- !ruby/object:MKD::Tileset
-  id: 6
-  name: Fences & Rails
-  graphic_name: fences_and_rails
-  priorities: []
-  passabilities:
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 0
-  - 15
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 0
-  - 15
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  - 0
-  - 0
-  - 0
-  - 0
-  - 0
-  - 15
-  - 15
-  - 15
-  tags: []
+"xúÌVKk„0v`q¸»´ç{/9Ùú≥|1¥ªñ@)ÅL	⁄Dm€X*eŸ?≤«˛å˝Y˚÷≤#[VÂ8Å“Ó°ÛiñÁ°±}8%…ÿS∞*?D_÷R-U’Í-Ë)¯Fÿ˜Æo“‡tπéííUDÓœ&≥^)∏9ø8œ∑øç'3«w¡ˆ]Àèç2F‚Ù4cöàxÂ˜zµΩ
+À˛ª`◊d.à„~NæÀæy™[&òPp›ÃH´“∏*ã‹ÀùàiòEOÒvPs∑38:RèÕwS<€È∞™˝h¬IÌ±¿©=ø;Mâ‹eA–·Y<ﬁ¢}e«,j!%?;¢8∫uxÿJ/©ôzk\øìˆWêﬁ^Ì√˝˛ﬁ√ø∞ŸWmyoQôöeáÍUk"Ò/¢6(!)+kÉ£E^ñˆû˝§˜†?y8>2úT	 –uû†nô ˙ÄY‡ ’À)åj|VÌá0ŒÓæäÂzúΩÏ.‰∏‚8âI®«≈<ìÚuGÓüæ9%‰3÷œ'Kõˇ§<Î˜öﬂˇ∑R6Säì`åéπi˛ÀıÍÚì†,´iâ@§1§I0Bº/¢xªçWÓdF∂8ZÆ‡1¡ÈCpä_MT/w¬¨SLXC`!óJ6∞@ËÍ˚¸≈”^à^€à÷G$˘…l‘˝e}˘„rüÀ
