--- a/data/maps/map001.mkd
+++ b/data/maps/map001.mkd
@@ -1,75 +1,1 @@
----
-:type: :map
-:data: !ruby/object:MKD::Map
-  id: 1
-  name: MT. MOON
-  width: 5
-  height: 5
-  tiles:
-  - - &1
-      - 0
-      - 0
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-    - *1
-  passabilities: []
-  tags: []
-  tilesets:
-  - 1
-  events:
-    1: !ruby/object:MKD::Event
-      id: 0
-      name: New event
-      x: 1
-      y: 1
-      pages:
-      - !ruby/object:MKD::Event::Page
-        commands:
-        - - 0
-          - :message
-          - :text: Okay, you like your profile the way it is.
-        conditions: []
-        graphic:
-          :type: :file
-          :direction: 2
-          :param: gfx/characters/boy
-        triggers:
-        - - :action
-        automoveroute:
-          :frequency: 0
-          :commands:
-          - :down
-          - :down
-          - :right
-          - :right
-          - :up
-          - :up
-          - :left
-          - :left
-      settings: !ruby/object:MKD::Event::Settings
-        priority: 1
-        passable: false
-        can_start_surfing_here: true
-        reset_position_on_transfer: true
-        speed: 2.2
+"åxœÍRKÓ0î%iÚ- ´B+¡•)BÛÒãä’‹TÁ½åPy“I2Ú&ÎÚÎ¶Qÿ<cS	~™èóx¶ç›Y]­¢²@ìL:ÆÒ´RÛm«ø'KFu[‹u*`ƒëmÕR©{³µZZ³me¾€/¸»•ÆÈ.A@ƒ%­H»Ml8ÜZü`[|¸øüõæÔÉl8ämâÄ–¸Ã›ÄI×‡ğ:qbëŠt¯'í^c8ÏLÑÊ¦QùŒhÈ[ìïQ—3h{¥ñA5Êö2}®€\N È‚Ìh¬ø,Ën&I0¨Û›Ø­e/eõ|¾nxÓÅ’ODMÅpGåFItÌ©î¤®R¾63›¢UyúÄŸweHXƒÜ¬­pYJwB÷jxG;á”ƒ¼û±˜¯íí‚#VÌ6S®#rO<Õåhc×Ï);Ålí¸K\v2İå.Å¿Ïæë8Ñ8™üÍ|Ì™J§Q@af\OwäèXúoåÍŸ<.ÿàòƒ_ß{|w²ÍıúÒ£8Ù–'å2Ñˆµÿ/3®Ø—;˜ÜPaÍTÄTÛ‚önî¯:y#x¿‰NmÎ×ØÈ6yœJ#˜²×óyJZÉƒØÉ&ìnexŒıñ±ïâ
