Removed debug map overwrites & connections

--- a/data/maps/map001.mkd
+++ b/data/maps/map001.mkd
@@ -1,1 +1,1 @@
-{":type":":map",":data":{"^c":"MKD::Map","@id":1,"@dev_name":"Top Left Map","@display_name":"Top Left Map","@width":5,"@height":5,"@tiles":[[[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0]],[null,null,[1,20],null,null,null,[1,27],[1,28],[1,29],null,null,[1,35],[1,36],[1,37],null,null,[1,43],[1,44],[1,45],null,null,null,null,null,null]],"@tilesets":[1,3],"@events":{"1":{"^c":"MKD::Event","@id":1,"@name":"New event","@x":0,"@y":0,"@pages":[{"^c":"MKD::Event::Page","@commands":[[0,":message",{":text":"Okay, you like your profile the way it is."}]],"@conditions":[],"@graphic":{":type":":file",":direction":2,":param":"gfx/characters/boy"},"@triggers":[[":action"]],"@automoveroute":{":frequency":0,":commands":[":down",":down",":down",":down",":right",":right",":right",":right",":up",":up",":up",":up",":left",":left",":left",":left"]}}],"@settings":{"^c":"MKD::Event::Settings","@priority":1,"@passable":false,"@can_start_surfing_here":true,"@reset_position_on_transfer":true,"@speed":2.2}}}}}
+{":type":":map",":data":{"^c":"MKD::Map","@id":1,"@dev_name":"Top Left Map","@display_name":"Top Left Map","@width":7,"@height":7,"@tiles":[[[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0],[0,0]],[null,null,[1,20],null,null,null,null,null,[1,27],[1,28],[1,29],null,null,null,null,[1,35],[1,36],[1,37],null,null,null,null,[1,43],[1,44],[1,45],null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null,null]],"@tilesets":[1,3],"@events":{"1":{"^c":"MKD::Event","@id":1,"@name":"New event","@x":0,"@y":0,"@pages":[{"^c":"MKD::Event::Page","@graphic":{":type":":file",":direction":2,":param":"gfx/characters/boy"},"@automoveroute":{":frequency":0,":commands":[":down",":down",":down",":down",":right",":right",":right",":right",":up",":up",":up",":up",":left",":left",":left",":left"]},"@triggers":[[":action"]],"@commands":[],"@conditions":[]}],"@settings":{"^c":"MKD::Event::Settings","@priority":1,"@passable":false,"@can_start_surfing_here":true,"@reset_position_on_transfer":true,"@speed":2.2}}}}}
